--- a/src/app/heros/heros.component.html
+++ b/src/app/heros/heros.component.html
@@ -1,11 +1,13 @@
-<h2>{{hero.name | uppercase}}</h2>
+<!-- <h2>{{hero.name | uppercase}}</h2>
 <div><span>id: </span>{{hero.id}}</div>
 <div><span>name: </span>{{hero.name}}</div>
 
 <div>
     <label for="name">Hero Name:</label>
     <input id="name" [(ngModel)]="hero.name" placeholder="name">
-</div>
+</div> -->
+
+<app-add-hero (addSuperhero)="onAddSuperHero($event)"></app-add-hero>
 
 <div *ngIf="selectedHero">
 
