Constructor and ngOnInit

--- a/src/app/heros/heros.component.html
+++ b/src/app/heros/heros.component.html
@@ -27,3 +27,8 @@
         </button>
     </li>
 </ul>
+
+<h4>All Products</h4>
+<div *ngFor="let product of allProducts">
+    <h4>{{product.title}}</h4>
+</div>
