--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <h1>{{title}}</h1>
 
+<a routerLink="/reactive-forms">Reactive Forms</a>
 
-<app-heros></app-heros>
+<a routerLink="/template-forms">Template Forms</a>
+
+<router-outlet></router-outlet>
