--- a/src/app/housing-location/housing-location.component.html
+++ b/src/app/housing-location/housing-location.component.html
@@ -1,5 +1,9 @@
-<section class="max-w-64 shadow-lg p-3">
-    <img [src]="housingLocation.photo"/>
-    <h2 class="mt-4">{{housingLocation.name}}</h2>
-    <p class="listing-location">{{ housingLocation.city}}, {{housingLocation.state }}</p>
-</section>
+
+
+    <section class="max-w-64 shadow-lg p-3">
+        <img [src]="housingLocation.photo"/>
+        <h2 class="mt-4">{{housingLocation.name}}</h2>
+        <a class="listing-location" [routerLink]="['/details',housingLocation.id]">{{ housingLocation.city}}, {{housingLocation.state }}</a>
+    </section>
+
+
